# conventional_commits_linter

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  0001-ci-updating-clean-git-history-checking-stage.patch  AGENT.md  CHANGELOG.md  Cargo.toml  Dockerfile  Earthfile  Makefile  README.md  release-please-config.json
conventional_commits_linter/: Cargo.toml  README.md
conventional_commits_linter/end-to-end-tests/features/: from-reference.feature  from-shortened-commit-hash.feature  from_shortened_commit_hash.feature  git-environment-variables.feature  git-history-all-parents-mode.feature  git-history-first-parent-mode.feature  json.feature  output_argument_ignores_casing.feature  quiet.feature
conventional_commits_linter/end-to-end-tests/features/steps/: assertions.py  given.py  then-violations.py  then.py  utilities.py  when.py
conventional_commits_linter/end-to-end-tests/features/violations/: angular-type-only.feature  empty-scope.feature  exclamation_mark_before_scope.feature  no-description-after-type-and-scope.feature  no-space-after-colon-preceding-type-and-scope.feature  preceding_whitespace.feature
conventional_commits_linter/src/: main.rs
conventional_commits_linter/src/cli/: mod.rs
conventional_commits_linter/src/output/: mod.rs
conventional_commits_linter_lib/: Cargo.toml  README.md
conventional_commits_linter_lib/src/: lib.rs
conventional_commits_linter_lib/src/commits/: mod.rs
conventional_commits_linter_lib/src/commits/commit/: mod.rs
conventional_commits_linter_lib/src/commits/commit/allow_angular_type_only/: mod.rs  tests.rs
conventional_commits_linter_lib/src/commits/commit/constants/: mod.rs
conventional_commits_linter_lib/src/commits/commit/conventional_commits_specification/: mod.rs  tests.rs
conventional_commits_linter_lib/src/commits/commit/conventional_commits_specification/empty_scope/: mod.rs  tests.rs
conventional_commits_linter_lib/src/commits/commit/conventional_commits_specification/exclamation_mark_before_scope/: mod.rs
conventional_commits_linter_lib/src/commits/commit/conventional_commits_specification/no_description_after_type_and_scope/: mod.rs  tests.rs
conventional_commits_linter_lib/src/commits/commit/conventional_commits_specification/no_space_after_colon_preceding_type_and_scope/: mod.rs  tests.rs
conventional_commits_linter_lib/src/commits/commit/conventional_commits_specification/preceding_whitespace/: mod.rs  tests.rs
conventional_commits_linter_lib/src/commits/commit/tests/: mod.rs
conventional_commits_linter_lib/src/commits/commit/tests/generated_tests/: mod.rs
conventional_commits_linter_lib/src/commits/commit/tests/generated_tests/generation/: mod.rs
conventional_commits_linter_lib/src/commits/commit/tests/snapshots/: conventional_commits_linter_lib__commits__commit__tests__test_conventional_commits_with_errors_case_14.snap  conventional_commits_linter_lib__commits__commit__tests__test_conventional_commits_with_errors_case_15.snap  conventional_commits_linter_lib__commits__commit__tests__test_conventional_commits_with_errors_case_17.snap  conventional_commits_linter_lib__commits__commit__tests__test_conventional_commits_with_errors_case_21.snap  conventional_commits_linter_lib__commits__commit__tests__test_conventional_commits_with_errors_case_22.snap  conventional_commits_linter_lib__commits__commit__tests__test_conventional_commits_with_errors_case_27.snap  conventional_commits_linter_lib__commits__commit__tests__test_conventional_commits_with_errors_case_28.snap  conventional_commits_linter_lib__commits__commit__tests__test_conventional_commits_with_errors_case_4.snap  conventional_commits_linter_lib__commits__commit__tests__test_conventional_commits_with_errors_case_6.snap  conventional_commits_linter_lib__commits__commit__tests__test_conventional_commits_with_errors_case_9.snap
conventional_commits_linter_lib/src/linter/: mod.rs
conventional_commits_linter_lib/src/linter/allow_angular_type_only/: mod.rs
conventional_commits_linter_lib/src/linter/conventional_commits_specification/: mod.rs
conventional_commits_linter_lib/src/linter/conventional_commits_specification/empty_scope/: mod.rs
conventional_commits_linter_lib/src/linter/conventional_commits_specification/no_description_after_type_and_scope/: mod.rs
conventional_commits_linter_lib/src/linter/conventional_commits_specification/no_space_after_colon_preceding_type_and_scope/: mod.rs
conventional_commits_linter_lib/src/linter/conventional_commits_specification/preceding_whitespace/: mod.rs
conventional_commits_linter_lib/src/linter/tests/: mod.rs
conventional_commits_linter_lib/src/linter/tests/generated_tests/: mod.rs
conventional_commits_linter_lib/src/linting_error/: mod.rs
conventional_commits_linter_lib/src/linting_errors/: mod.rs
conventional_commits_linter_lib/src/linting_errors/json/: mod.rs
conventional_commits_linter_lib/src/linting_errors/json/tests/: mod.rs
conventional_commits_linter_lib/src/linting_errors/json/tests/snapshots/: conventional_commits_linter_lib__linting_errors__json__tests__test_json_print_case_1.snap  conventional_commits_linter_lib__linting_errors__json__tests__test_json_print_case_2.snap  conventional_commits_linter_lib__linting_errors__json__tests__test_json_print_case_3.snap  conventional_commits_linter_lib__linting_errors__json__tests__test_json_print_from_git_case_1.snap  conventional_commits_linter_lib__linting_errors__json__tests__test_json_print_from_git_case_2.snap
conventional_commits_linter_lib/src/linting_errors/pretty/: mod.rs
conventional_commits_linter_lib/src/linting_errors/pretty/tests/: mod.rs
conventional_commits_linter_lib/src/linting_errors/pretty/tests/snapshots/: conventional_commits_linter_lib__linting_errors__pretty__tests__test_pretty_print_case_1.snap  conventional_commits_linter_lib__linting_errors__pretty__tests__test_pretty_print_case_2.snap  conventional_commits_linter_lib__linting_errors__pretty__tests__test_pretty_print_case_3.snap  conventional_commits_linter_lib__linting_errors__pretty__tests__test_pretty_print_from_git_case_1.snap  (+1 more)
(+160 files in other folders)
