[package]
name = "conventional_commits_linter"
version = "0.8.1"
description = "A tooling and language agnostic Git commit linter for the Conventional Commits specification."
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/conventional_commits_linter"
readme = "README.md"
keywords = ["conventional", "commits", "lint", "linting", "git"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
# Parsing commit messages
regex = "1.5.4"
lazy_static = "1.4.0"

# CLI parsing
structopt = "0.3.22"

# Logging
log = "0.4.14"
pretty_env_logger = "0.4.0"

# Reading commits
git2 = { version = "0.13.20", default-features = false, features=[] }

# Semantic Versioning parsing
semver = "1.0.3"

# For fancy output
ansi_term = "0.12.1"


[dev-dependencies]
# For parameterized testing.
rstest = "0.10.0"

# For snapshot testing.
insta = "1.7.1"


[profile.release]
lto = 'fat'
codegen-units = 1
