[package]
name = "conventional_commits_linter"
version = "0.12.2"
description = "A tooling and language agnostic utility to lint Git commits against the Conventional Commits specification."
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/conventional_commits_linter"
readme = "README.md"
keywords = ["conventional", "commits", "lint", "linting", "git"]
categories = ["command-line-utilities", "development-tools", "data-structures", "encoding", "parser-implementations"]


[dependencies]
# For CLI parsing.
structopt = "0.3.26"

# For logging.
log = "0.4.17"
pretty_env_logger = "0.4.0"

# For reading Git commits.
git2 = { version = "0.17.0", default-features = false, features=[] }

# For enum from _str etc for CLI usage.
strum = "0.24.1"
strum_macros = "0.24.3"


conventional_commits_linter_lib = "0.4.1"


[dev-dependencies]
