[package]
name = "conventional_commits_linter_lib"
version = "0.4.1"
description = "A tooling and language agnostic library to lint Git commits against the Conventional Commits specification."
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/conventional_commits_linter"
readme = "README.md"
keywords = ["conventional", "commits", "lint", "linting", "git"]
categories = ["text-processing", "development-tools", "data-structures", "encoding", "parser-implementations"]


[dependencies]
# For parsing commit messages.
regex = "1.7.3"
lazy_static = "1.4.0"

# For logging.
log = "0.4.17"

# For reading Git commits.
git2 = { version = "0.17.0", default-features = false, features=[] }

# For printing output as JSON.
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

# For fancy output.
ansi_term = "0.12.1"

# For enum from _str etc for CLI usage.
strum = "0.24.1"
strum_macros = "0.24.3"


[dev-dependencies]
# For parameterized testing.
rstest = "0.17.0"
rstest_reuse = "0.5.0"

# For snapshot testing.
insta = "1.29.0"
